--- a/index.html
+++ b/index.html
@@ -3,8 +3,43 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <!--<link href="css/bootstrap.min.css" rel="stylesheet">-->
+    <link href="css/index.css" rel="stylesheet">
+    <!--<link rel="stylesheet" type="text/css" href="css/loading-bar.css"/>-->
+    <!--<script type="text/javascript" src="css/loading-bar.js"></script>-->
 </head>
 <body>
+<button id="play">PLAY</button>
+<button id="reset">NEW GAME</button>
+<button class="type" id="3">2/3</button>
+<button class="type" id="5">3/5</button>
+<button class="type" id="7">4/7</button>
+<button class="type" id="8">5/8</button>
+<div id="player1">Player 1: 0</div>
+<div id="player2">Player 2: 0</div>
+<div style="width:50%; margin: auto; text-align: center;"><h1 id="board" >here</h1></div>
+<div style="margin-top: 6%; margin-left: 15%; margin-right: 3%;" class="row">
+    <div style="margin-right: 10%; text-align: center;" class="column ldBar" data-value="50" >
+        <h1>Round Score: <span id="player1RoundScore">0 </span></h1>
+        <!--<img src="cardImages/PNG/red_back.png" alt="Snow" style="width:85%;">-->
+    </div>
+    <!--<div style="padding-right: 10%; border: 2px solid red; width: 20%;" class="column">Here</div>-->
+    <div style="margin-left: 10%; text-align: center;" class="column">
+        <h1>Round Score: <span id="player2RoundScore">0</span></h1>
+        <!--<img src="cardImages/PNG/yellow_back.png" alt="Forest" style="width:85%;">-->
+    </div>
+
+</div>
+<div style="margin-top: 6%; margin-left: 18%; margin-right: 3%;" class="row">
+    <div style="margin-right: 10%;" class="column" id="player1Card">
+        <img src="cardImages/PNG/red_back.png" alt="Snow" style="width:85%; height: 70%">
+    </div>
+    <!--<div style="padding-right: 10%; border: 2px solid red; width: 20%;" class="column">Here</div>-->
+    <div style="margin-left: 11.5%;" class="column" id="player2Card">
+        <img src="cardImages/PNG/yellow_back.png" alt="Forest" style="width:85%;">
+    </div>
+
+</div>
 
 </body>
 <script src="rey.js"></script>
