--- a/index.html
+++ b/index.html
@@ -3,44 +3,74 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <!--<link href="css/bootstrap.min.css" rel="stylesheet">-->
-    <link href="css/index.css" rel="stylesheet">
-    <!--<link rel="stylesheet" type="text/css" href="css/loading-bar.css"/>-->
-    <!--<script type="text/javascript" src="css/loading-bar.js"></script>-->
+    <link href="css/index.css" rel="stylesheet"/>
+    <link rel="stylesheet" type="text/css" href="css/loading-bar.css"/>
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"  rel="stylesheet"/>
 </head>
 <body>
-<button id="play">PLAY</button>
-<button id="reset">NEW GAME</button>
-<button class="type" id="3">2/3</button>
-<button class="type" id="5">3/5</button>
-<button class="type" id="7">4/7</button>
-<button class="type" id="8">5/8</button>
-<div id="player1">Player 1: 0</div>
-<div id="player2">Player 2: 0</div>
-<div style="width:50%; margin: auto; text-align: center;"><h1 id="board" >here</h1></div>
-<div style="margin-top: 6%; margin-left: 15%; margin-right: 3%;" class="row">
-    <div style="margin-right: 10%; text-align: center;" class="column ldBar" data-value="50" >
-        <h1>Round Score: <span id="player1RoundScore">0 </span></h1>
-        <!--<img src="cardImages/PNG/red_back.png" alt="Snow" style="width:85%;">-->
-    </div>
-    <!--<div style="padding-right: 10%; border: 2px solid red; width: 20%;" class="column">Here</div>-->
-    <div style="margin-left: 10%; text-align: center;" class="column">
-        <h1>Round Score: <span id="player2RoundScore">0</span></h1>
-        <!--<img src="cardImages/PNG/yellow_back.png" alt="Forest" style="width:85%;">-->
+<!--<div class="ldBar" id="player1Bar" data-value="0"></div>-->
+
+<!--<h1>Round Score: <span id="player1RoundScore">0 </span></h1>-->
+
+<div class="mt-5 container">
+    <div class="row">
+
+    <div class="col-sm text-center">
+        <h1 id="board">Press the play button to play a hand.</h1>
     </div>
 
 </div>
-<div style="margin-top: 6%; margin-left: 18%; margin-right: 3%;" class="row">
-    <div style="margin-right: 10%;" class="column" id="player1Card">
-        <img src="cardImages/PNG/red_back.png" alt="Snow" style="width:85%; height: 70%">
-    </div>
-    <!--<div style="padding-right: 10%; border: 2px solid red; width: 20%;" class="column">Here</div>-->
-    <div style="margin-left: 11.5%;" class="column" id="player2Card">
-        <img src="cardImages/PNG/yellow_back.png" alt="Forest" style="width:85%;">
-    </div>
+
+
 
 </div>
+<div class="mt-5 container">
+    <div class="row h-20">
+        <div class="col-sm text-center">
+            <div><h3 id="player1">Red: 0</h3></div>
+            <div style="margin-top: 8%">Cards: <span id="1answers"></span></div>
+
+
+
+        </div>
+        <div class="col-sm text-center">
+            <button style="margin-top: 20%" id="play">PLAY HAND</button>
+        </div>
+        <div class="col-sm text-center">
+            <div><h3 id="player2">Yellow: 0</h3></div>
+            <div style="margin-top: 8%">Cards: <span id="2answers"></span></div>
+       </div>
+    </div>
+    <div class="row">
+        <div class="col-sm text-center" id="player1Card">
+            <img class="w-85" src="cardImages/PNG/red_back.png" alt="Snow" >
+        </div>
+        <div class="col-sm text-center">
+            <div style="border-left: 3px solid red;" class="w-30 d-inline-block" id="player1Bar" data-type="fill" data-img="icon.svg" data-value="0"></div>
+            <div style="border-right: 3px solid yellow;" class="w-30 d-inline-block" id="player2Bar" data-type="fill" data-img="icon.svg" data-value="0"></div>
+            <div>
+            <button style="margin-top: 10%" id="reset">Run it back</button><br>
+            <button style="margin-top: 10%" class="type" id="3">Best of 3</button><br>
+            <button style="margin-top: 5%" class="type" id="5">Best of 5</button><br>
+            <button style="margin-top: 5%" class="type" id="7">Best of 7</button><br>
+            <button style="margin-top: 5%" class="type" id="9">Best of 9 </button>
+            </div>
+
+
+        </div>
+        <div class="col-sm text-center" id="player2Card">
+            <img class="w-85"  src="cardImages/PNG/yellow_back.png" alt="Forest" style="width:85%;">
+        </div>
+    </div>
+</div>
+
 
 </body>
+
+<script type="text/javascript" src="css/loading-bar.js"></script>
+<script
+        src="https://code.jquery.com/jquery-3.3.1.min.js"
+        integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+        crossorigin="anonymous"></script>
 <script src="rey.js"></script>
 </html>
