--- a/index.html
+++ b/index.html
@@ -6,30 +6,19 @@
     <link href="css/index.css" rel="stylesheet"/>
     <link rel="stylesheet" type="text/css" href="css/loading-bar.css"/>
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"  rel="stylesheet"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css"/>
 </head>
-<body>
-<!--<div class="ldBar" id="player1Bar" data-value="0"></div>-->
+<body style="overflow: hidden;">
 
-<!--<h1>Round Score: <span id="player1RoundScore">0 </span></h1>-->
-<div class="dropdown">
-    <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-        Game info
-    </button>
-    <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-        <a class="dropdown-item" href="#">Action</a>
-        <a class="dropdown-item" href="#">Another action</a>
-        <a class="dropdown-item" href="#">Something else here</a>
-    </div>
-</div>
 
 <div class="mt-5 container">
     <div class="row">
 
-    <div class="col-sm text-center">
-        <h1 id="board">Press the play button to play a hand.</h1>
-    </div>
+        <div class="col-sm text-center">
+            <h1 id="board">Play War</h1>
+        </div>
 
-</div>
+    </div>
 
 
 
@@ -45,32 +34,32 @@
         </div>
         <div class="col-sm text-center">
             <div><h3>Round <span id="lower">1</span> of <span id="higher">3</span></h3></div>
-            <button style="margin-top: 5%" id="play">PLAY HAND</button>
+            <button style="margin-top: 5%" id="play">Battle</button>
         </div>
         <div class="col-sm text-center">
             <div><h3 style="border-bottom: 3px solid yellow" id="player2">Yellow: 0</h3></div>
             <div style="margin-top: 8%">Cards: <span id="2answers"></span></div>
-       </div>
+        </div>
     </div>
     <div class="row">
         <div class="col-sm text-center" id="player1Card">
-            <img class="w-85" src="cardImages/PNG/red_back.png" alt="Snow" >
+            <img class="w-85 animated slideInLeft" src="cardImages/PNG/red_back.png" alt="Snow" >
         </div>
         <div class="col-sm text-center">
             <div style="border-left: 3px solid red;" class="w-30 d-inline-block" id="player1Bar" data-type="fill" data-img="icon.svg" data-value="0"></div>
             <div style="border-right: 3px solid yellow;" class="w-30 d-inline-block" id="player2Bar" data-type="fill" data-img="icon.svg" data-value="0"></div>
             <div>
-            <button style="margin-top: 10%" id="reset">Run it back</button><br>
-            <button style="margin-top: 10%" class="type" id="3">Best of 3</button><br>
-            <button style="margin-top: 5%" class="type" id="5">Best of 5</button><br>
-            <button style="margin-top: 5%" class="type" id="7">Best of 7</button><br>
-            <button style="margin-top: 5%" class="type" id="9">Best of 9 </button>
+                <button style="margin-top: 10%" id="reset">Run it back</button><br>
+                <button style="margin-top: 10%" class="type" id="3">Best of 3</button><br>
+                <button style="margin-top: 5%" class="type" id="5">Best of 5</button><br>
+                <button style="margin-top: 5%" class="type" id="7">Best of 7</button><br>
+                <button style="margin-top: 5%" class="type" id="9">Best of 9 </button>
             </div>
 
 
         </div>
         <div class="col-sm text-center" id="player2Card">
-            <img class="w-85"  src="cardImages/PNG/yellow_back.png" alt="Forest" style="width:85%;">
+            <img class="w-85 animated slideInRight"  src="cardImages/PNG/yellow_back.png" alt="Forest" style="width:85%;">
         </div>
     </div>
 </div>
