--- a/index.html
+++ b/index.html
@@ -8,12 +8,11 @@
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"  rel="stylesheet"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css"/>
 </head>
-<body style="overflow: hidden;">
+<body style="overflow-x: hidden;">
 
 
 <div class="mt-5 container">
     <div class="row">
-
         <div class="col-sm text-center">
             <h1 id="board">Play War</h1>
         </div>
